fixed spacing issue

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -18,9 +18,9 @@ code {
 
 .t-card-image {
   border-radius: 10px;
-  /* width: 1500px;
-  height: 980px; */
-  /* width: 25%;
+  width: 400px;
+  height: 220px;
+  /* width: 50%;
   height: 100%; */
   box-shadow: 0px 0px 3px 1px #ccc;
 }
